# exhaustive-map

./: Cargo.toml  README.md
.github/workflows/: main.yml
benches/: map.rs
exhaustive-map-macros/: Cargo.toml
exhaustive-map-macros/src/: lib.rs
src/: finite.rs  lib.rs  map.rs  range.rs
src/finite_impls/: alloc.rs  core.rs  mod.rs  std.rs  test_utils.rs
tests/: Cargo.toml  lib.rs  ui.rs
tests/fail/: u32_overflow.rs  u32_overflow.stderr  usize_max_plus_one.rs  usize_max_plus_one.stderr
