[workspace]
members = ["exhaustive-map-macros"]

[workspace.package]
edition = "2021"
authors = ["Asger Hautop Drewsen <asger@tyilo.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tyilo/exhaustive-map"
keywords = ["exhaustive", "map", "finite"]
categories = ["data-structures"]

[package]
name = "exhaustive-map"
version = "0.2.1"
description = "An exhaustive map for types with finite inhabitants"
readme = "README.md"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
exhaustive-map-macros = { version = "0.2.1", path = "exhaustive-map-macros" }
