[workspace]
members = ["exhaustive-map-macros", "tests"]

[workspace.package]
edition = "2021"
authors = ["Asger Hautop Drewsen <asger@tyilo.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tyilo/exhaustive-map"
keywords = ["exhaustive", "map", "finite", "no-std", "no-std::no-alloc"]
categories = ["data-structures"]

[package]
name = "exhaustive-map"
version = "0.3.0"
description = "An exhaustive map for types with finite inhabitants"
readme = "README.md"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
exhaustive-map-macros = { version = "=0.3.0", path = "exhaustive-map-macros" }
generic-array = { version = "1.2.0", features = ["alloc"] }
serde = { version = "1.0.219", optional = true }

[features]
default = ["std"]
serde = ["dep:serde", "alloc"]
std = ["alloc"]
alloc = []

[dev-dependencies]
divan = "0.1.21"
serde_json = "1.0.142"
ui_test = "0.30.2"
# For ui_test regexes:
regex = { version = "1.11.1", default-features = false, features = ["unicode-perl"] }

[[test]]
name = "ui"
harness = false

[[bench]]
name = "map"
harness = false
required-features = ["std"]
