[package]
name = "exhaustive-map-macros"
version = "0.2.2"
description = "Proc macros for the exhaustive-map crate"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = "2.0.58"
